# eval-pdf-extract

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
adapters/: registry.json  registry.schema.json
adapters/_template/: README.md
adapters/bin-xpdf/: README.md  pyproject.toml
adapters/bin-xpdf/src/adapter/: __main__.py
adapters/nodejs-pdf-parse/: README.md  main.js  package-lock.json  package.json
adapters/nodejs-pdfjs/: README.md  main.js  package-lock.json  package.json
adapters/nodejs-unpdf/: README.md  main.js  package-lock.json  package.json
adapters/python-pdfplumber/: README.md  pyproject.toml
adapters/python-pdfplumber/src/adapter/: __main__.py
adapters/python-pymupdf/: pyproject.toml
adapters/python-pymupdf/src/adapter/: __main__.py
contract/: adapter-protocol.md  metric-spec.md  result-schema.json
corpus/: README.md  add-fixture-config.schema.json  add-fixture.example.yaml  fixture-meta.schema.json  manifest.json  manifest.schema.json
corpus/fixtures/01_plain_text__lorem/: expected.example.json  meta.example.jsonc
scripts/: check-env.ps1  check-env.sh  clean.py  lint-adapter.ps1  lint-adapter.sh  lint_adapter.py
src/orchestrator/: __init__.py  __main__.py  cli.py  loader.py  models.py  report.py  runner.py  scorer.py  store.py
src/orchestrator/metrics/: __init__.py  robustness.py  structure.py  text.py
src/webui/: __init__.py
src/webui/backend/: __init__.py  data.py  main.py
tests/: conftest.py  test_metrics_robustness.py  test_metrics_structure.py  test_metrics_text.py  test_runner.py  test_scorer.py  test_store.py
webui/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
webui/frontend/src/: Layout.tsx  api.ts  main.tsx
webui/frontend/src/pages/: AdapterDetail.tsx  Adapters.tsx  Compare.tsx  Dashboard.tsx  FixtureDetail.tsx  Fixtures.tsx  Runs.tsx
