[project]
name = "python-pymupdf-adapter"
version = "1.24.0"
description = "PyMuPDF adapter for eval-pdf-extract"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24.0",
]

[project.scripts]
python-pymupdf = "adapter.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adapter"]
